--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QueryForum</title>
+  <title>Accolite Forums</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,4 +13,5 @@
 <body>
   <app-root></app-root>
 </body>
+<footer style="color: var(--ligt); font-family: mario; margin-left: 44.5%; padding-bottom: 5%;"><i> Designed by Group 2 </i></footer>
 </html>
