Solved linting issues

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -13,5 +13,5 @@
 <body>
   <app-root></app-root>
 </body>
-<footer style="color: var(--ligt); font-family: mario; margin-left: 44.5%; padding-bottom: 5%;"><i> Designed by Group 2 </i></footer>
+<footer style="color: var(--ligt); font-family: mario,sans-serif; margin-left: 44.5%; padding-bottom: 5%;"><em> Designed by Group 2 </em></footer>
 </html>
